--- a/docs.html
+++ b/docs.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TSX TaxShield – Docs</title>
+
+  <style>
+    :root{
+      --bg1:#070b14;
+      --bg2:#0b1020;
+      --card:rgba(255,255,255,.05);
+      --border:rgba(255,255,255,.08);
+      --text:#eaf0ff;
+      --muted:rgba(234,240,255,.75);
+      --accent:#4fe38a;
+      --accent2:#e6c15a;
+      --radius:18px;
+      --shadow:0 18px 60px rgba(0,0,0,.45);
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(900px 600px at 15% 20%, rgba(79,227,138,.12), transparent 60%),
+        radial-gradient(900px 600px at 85% 15%, rgba(230,193,90,.10), transparent 60%),
+        linear-gradient(180deg,var(--bg1),var(--bg2));
+    }
+
+    a{ color:inherit; text-decoration:none; }
+
+    .wrap{
+      max-width:900px;
+      margin:0 auto;
+      padding:28px 18px 70px;
+    }
+
+    .back{
+      display:inline-block;
+      margin-bottom:18px;
+      color:var(--muted);
+    }
+
+    h1{
+      margin:6px 0 18px;
+      font-size:42px;
+    }
+
+    h2{
+      margin:0 0 10px;
+      font-size:20px;
+    }
+
+    p{
+      line-height:1.6;
+      color:var(--muted);
+      margin:0 0 12px;
+    }
+
+    ul{
+      margin:10px 0 0 18px;
+      color:var(--muted);
+    }
+
+    li{ margin:6px 0; }
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:20px 22px;
+      margin-bottom:18px;
+    }
+
+    .pill-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      margin-top:10px;
+    }
+
+    .pill{
+      padding:8px 12px;
+      border-radius:999px;
+      font-size:13px;
+      background:rgba(255,255,255,.06);
+      border:1px solid var(--border);
+      color:var(--muted);
+    }
+
+    .pill.accent{ color:var(--accent); border-color:rgba(79,227,138,.4); }
+    .pill.gold{ color:var(--accent2); border-color:rgba(230,193,90,.45); }
+
+    @media (max-width:900px){
+      h1{ font-size:34px; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+
+    <a class="back" href="index.html">← Back to Home</a>
+
+    <h1>Docs</h1>
+
+    <div class="card">
+      <h2>Purpose of documentation</h2>
+      <p>
+        The TSX documentation exists to explain the system clearly, honestly,
+        and without marketing distortion. Everything here is written for
+        understanding — not persuasion.
+      </p>
+      <p>
+        No financial advice. No performance claims. Just structure and intent.
+      </p>
+    </div>
+
+    <div class="card">
+      <h2>What’s available now</h2>
+      <ul>
+        <li>Tokenomics overview (supply
 
