--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       backdrop-filter: blur(10px);
       background: rgba(8,3,14,.55);
       border-bottom: 1px solid rgba(255,255,255,.06);
+    padding: 12px 0;
+min-height: 68px;
+  
     }
 
     .nav{
