Adjust header height and brand image styles
Increased the minimum height of the header and adjusted brand image display properties.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background: rgba(8,3,14,.55);
       border-bottom: 1px solid rgba(255,255,255,.06);
     padding: 12px 0;
-min-height: 68px;
+min-height: 190px;
   
     }
 
@@ -78,6 +78,8 @@ min-height: 68px;
     height:182px;
 
       width:auto;
+display:block;
+object-fit:contain;
       vertical-align:middle;
       filter: drop-shadow(0 10px 20px rgba(0,0,0,.35));
     }
