Add animations and transform properties to styles

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ display:block;
 object-fit:contain;
       vertical-align:middle;
       filter: drop-shadow(0 10px 20px rgba(0,0,0,.35));
+animation: coinSpin 12s linear infinite;
+transform-origin: 50% 50%;
+will-change: transform;
+      
     }
     .brand span{
       font-size:18px;
@@ -91,7 +95,10 @@ object-fit:contain;
       color:transparent;
       text-shadow: 0 0 22px rgba(79,227,138,.18);
     }
-
+animation: coinSpin 12s linear infinite;
+transform-origin: 50% 50%;
+will-change: transform;
+   
     .links{
       display:flex;
       gap:10px;
