Change backface visibility to visible in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ object-fit:contain;
       vertical-align:middle;
       filter: drop-shadow(0 10px 20px rgba(0,0,0,.35));
 animation: coinFlip 6s linear infinite;
-backface-visibility: hidden;
+backface-visibility: visible;
+-webkit-backface-visibility: visible;
    
 transform-origin: 50% 50%;
 will-change: transform;
