Replace brand div with updated coin display

--- a/index.html
+++ b/index.html
@@ -245,11 +245,15 @@ will-change: transform;
 <body>
   <div class="topline">
     <div class="nav">
-      <div class="brand">
-        <img src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin">
-        <span>TSX TaxShield</span>
-      </div>
-
+<div class="brand">
+  <div class="coin">
+    <img class="coin-face front" src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin Front">
+    <div class="coin-edge"></div>
+    <img class="coin-face back" src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX Coin Back">
+  </div>
+  <span>TSX TaxShield</span>
+</div>
+  
       <div class="links">
         <a class="pill" href="tokenomics.html">Tokenomics</a>
 <a class="pill" href="treasury.html">Treasury</a>
