--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   background: rgba(8, 3, 14, 0.55);
   border-bottom: 1px solid rgba(255, 255, 255, 0.06);
   padding: 12px 0;
-  min-height: 90px;
+  min-height: auto;
  
 }
 
@@ -61,7 +61,7 @@
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:14px;
+      gap:  14px;
       padding: 12px 18px;
       max-width: 1100px;
       margin: 0 auto;
