--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
       --gold1:#d6b15f;
       --gold2:#f0d38b;
+      --green: #4fe38a;
+
 
       --shadow: 0 18px 60px rgba(0,0,0,.45);
       --radius:18px;
@@ -99,7 +101,7 @@ will-change: transform;
   background: linear-gradient(90deg, var(--gold2), var(--green));
   -webkit-background-clip:text;
   background-clip:text;
-  color:transparent;
+  color: var(--text);
   text-shadow: 0 0 22px rgba(79,227,138,.18);
 }
    
