Update TSX TaxShield display to use an image
Replaced text 'TSX TaxShield' with an image.

--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@ will-change: transform;
         <div class="coin-edge"></div>
         <img class="coin-face back" src="b37747bb-7c9b-487e-bf7b-9fc88c34e20b.png" alt="TSX coin back">
       </div>
-      <span>TSX TaxShield</span>
+    <img src="file_00000000b82461f4a57d617f4c2c0c20.png" alt="TSX TaxShield">
+
     </div>
 
     <div class="links">
